4.5 -> 5.0:
    - jbj: rip deep ia64 emulated triarch multilib hacks. worth millions to vendor, not me.
    - jbj: rip Depends index and dependency result caching.
    - rse: ported to DragonFly BSD (1.8.1)
    - rse: add the necessary Autoconf glue for using the ancient (and nowadays resurrected by POSIX) insque(3)
    - rse: ported to IBM AIX (5.3)
    - rse: ported to Mac OS X (10.4), aka Darwin (8.10)
    - rse: re-implement --force option (on installation) with a simple POPT alias instead of twisted and spreaded code
    - rse: for libraries prefer "pkg-config foo" before "foo-config" as pkg-config(1) provides more precise CPPFLAGS/CFLAGS
    - rse: unbreak rpm(1) short-hand option "--force" on package installation
    - rse: use implicit internal library dependencies by default, but allow disabling via --disable-build-intlibdep
    - rse: use implicit external library dependencies by default, but allow disabling via --disable-build-extlibdep
    - rse: remove GNU libtool *.la files during installation only if --disable-build-lafiles is used
    - rse: on --rebuilddb remove (currently) unused database files to avoid mixed formats on backend upgrades and switches
    - jbj: adjust signal polling for python exit purposes <pmatlai@redhat.com>.
    - rse: provide a first cut for an librpmconstant.vers ld(1) version script
    - jbj: reapply 2.127 with more careful rpmExpand() fix.
    - jbj: scale _macro_BUFSIZE as 2 * BUFSIZ (16384) everywhere but rpmExpand()
    - jbj: use _macro_BUFSIZ, not compiled in BUFSIZ, to size expansion targets.
    - jbj: enable %{dirname:...} macro primitive.
    - nanardon: add the librpmconstant library which provides RPM API constants (usually to language bindings)
    - jbj: rescuscitate rpm-perl, include <rpmio.h> explicitly.
    - jbj: perl.prov fiddles (#249135).
    - jbj: rescuscitate rpm-python, include <rpmio.h> explicitly.
    - jbj: adopt rpm.org signal handling <pmatlai@redhat.com>.
    - jbj: fix a --import memory leak.